# python-me-repls

./: README.md
aiohttp/: client.py  client_eudat.py  client_gocdb.py
async/aiohttp/: client_gocdb.py  fetchwikipedia.py
async/basic/: evloop-schedule.py  task-await.py
async/contextvars/: main.py
async/contextvars/example/: context.py  logger.py  worker.py
basic/: coro1.py  coro_evloop.py  coro_funcprocess.py  coro_underlie.py  evloop-run-exit.py  evloop_coro.py  quickstart.py
caso-keystone/: admin-openrc.template  caso-5-reqs.txt  client.conf.template  client.py  config.py  log.py
classes/singleton/: c.py  d.py
classes/subclass-cache/: a.py  b.py  main.py
docker/: Dockerfile  docker-run-asyncio-test-shared.sh  docker-run-asyncio-test.sh  docker-run-pyrepls-shared.sh  docker-run-pyrepls.sh
docker/rpms/: python3-aiofiles-0.6.0-1.el7.noarch.rpm  python3-aiohttp-3.6.2-3.el7.x86_64.rpm  python3-aiohttp-retry-2.3-1.noarch.rpm  python3-async-timeout-3.0.1-8.el7.noarch.rpm  python3-attrs-20.2.0-1.el7.noarch.rpm  python3-chardet-3.0.4-18.el7.noarch.rpm  python3-idna-2.10-2.el7.noarch.rpm  python3-idna-ssl-1.1.0-9.el7.noarch.rpm  python3-multidict-4.7.4-1.el7.x86_64.rpm  python3-typing-3.7.4.3-1.noarch.rpm  python3-typing-extensions-3.7.4.3-1.noarch.rpm  python3-uvloop-0.15.0.dev0-1.x86_64.rpm  python3-yarl-1.4.2-2.el7.x86_64.rpm
new_project/: README.md  pyproject.toml
new_project/cli/: newproject.py
